--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PotholeDetails"></activity>
+        <activity android:name=".HttpPostRequest"></activity>
+        <activity android:name=".PotholeDetails" />
         <activity android:name=".GpsTracker" />
         <activity android:name=".LocationActivity" />
         <!--
@@ -49,6 +50,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".PotholeReportActivity" />
+        <activity android:name=".GeoLocation.LocationMainActivity" />
+        <activity android:name=".IntroSlider.WelcomeActivity" />
     </application>
 
 </manifest>
